[pod-count] Address feedback from ROS team